FIX replace Java 11 API method
to keep this working with Java 8